<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="khaliliyoussef.capstoneproject.PostActivity">

    <ImageButton
        android:id="@+id/image_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#00ffffff"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/add_btn"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="-51dp" />

    <EditText
        android:id="@+id/ed_post_title"
        android:background="@drawable/input_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/image_post"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:hint="@string/post_title"
        android:maxLines="1"
         />

    <EditText
        android:id="@+id/ed_post_description"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/post_description"
        android:layout_below="@+id/ed_post_title"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/post_publish"
        android:textColor="@color/white" />

</RelativeLayout>
